<resources>
    <string name="app_name">Poker</string>
    <string name="open">Open for anyone</string>
    <string name="cbOpenToolTip">If set, anyone will be able to join your table.</string>
    <string name="spSizeToolTip">How many players do you want to play with?</string>
    <string name="spInitial_blindToolTip">Table will start with this big blind amount</string>
    <string name="starting_stack">Starting stack</string>
    <string name="spDoubleBlind">Big blind will be doubled after this amount of turns</string>
    <string name="create">Create</string>
    <string name="start_table">Start table</string>
    <string name="cancel">Cancel</string>
    <string name="exit_alert">Are you sure to want to quit?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="join_table">Join a table</string>
    <string name="game_play_table_id">Table code: %1$d</string>
    <string name="poker_table">A poker table</string>
    <string name="leave_table_alert">Do you wish to leave the table? You won\'t be able to join again.</string>
    <string name="waiting_for_others">Waiting for others</string>
    <string name="random">Random</string>
    <string name="alert_join_table">Do you want to join a random table or a specific?</string>
    <string name="specific">Specific</string>
    <string name="ok">OK</string>
    <string name="enter_id">Enter ID of table</string>
    <string name="leave_table">Leave table</string>
    <string name="table_join_success">Successfully joined table</string>
    <string name="table_started">Table Started</string>
    <string name="eliminated_alert">You\'ve been eliminated from table %1$d</string>
    <string name="congratulation">Congratulations!\nYou won table %1$d!</string>
    <string name="winner_announcement">%1$s has won table %2$d!</string>
    <string name="avatar">Avatar</string>
    <string name="call_action">Call %1$d</string>
    <string name="pot">Pot: %1$d</string>
    <string name="raise">Raise</string>
    <string name="check">Check</string>
    <string name="fold">Fold</string>
    <string name="last_turn_results">Last turn results</string>
    <string name="out">Out</string>
    <string name="royal_poker">Royal Poker?</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="connect">Connect</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="settings">Settings</string>
    <string name="remember_me">Remember me</string>
    <string name="play_as_guest">Play as guest</string>
    <string name="statistics_u"><u>Statistics</u></string>
    <string name="total_hands">Total hands</string>
    <string name="tables_won">Tables won</string>
    <string name="tables_played">Tables played</string>
    <string name="total_hands_won">Total hands won</string>
    <string name="total_chips_won">Total chips won</string>
    <string name="biggest_pot_won">Biggest pot won</string>
    <string name="total_bet_raise_count">Total bet/raise count</string>
    <string name="showdown_participations">Showdown participations</string>
    <string name="flops_seen">Flops seen</string>
    <string name="turns_seen">Turns seen</string>
    <string name="rivers_seen">Rivers seen</string>
    <string name="players_busted">Players busted</string>
    <string name="registration_date">Registration date</string>
    <string name="statistics">Statistics</string>
    <string name="join_or_start_new_table">Join or start new table</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="switch_to_table_1">Switch to table 1</string>
    <string name="switch_to_table_2">Switch to table 2</string>
    <string name="switch_to_table_3">Switch to table 3</string>
    <string name="play">Play</string>
    <string name="spectate">Spectate</string>
    <string name="alert_spectate_table">Do you want to spectate a specific table or a random one?</string>
    <string name="alert_disconnection"><u>%1$s</u> had to left table %2$d!</string>
</resources>