<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="beforeDescendants"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:padding="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_open"
                android:labelFor="@id/cb_open"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_margin="8dp"
                android:text="@string/open" />

            <CheckBox
                android:id="@+id/cb_open"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_open"
                android:tooltipText="@string/cbOpenToolTip" />

            <TextView
                android:id="@+id/tv_royal"
                android:labelFor="@id/cb_royal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/cb_royal"
                android:layout_margin="8dp"
                android:text="@string/royal_poker" />

            <CheckBox
                android:id="@+id/cb_royal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:tooltipText="@string/cbOpenToolTip" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.tiper.MaterialSpinner
            android:id="@+id/msp_size"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="8dp"
            android:hint="@string/spSizeToolTip"/>

        <com.tiper.MaterialSpinner
            android:id="@+id/msp_initial_blind"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:paddingVertical="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/spInitial_blindToolTip" />

        <com.tiper.MaterialSpinner
            android:id="@+id/msp_double_blind"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:paddingVertical="8dp"
            android:layout_height="wrap_content"
            android:hint="@string/spDoubleBlind" />

        <com.tiper.MaterialSpinner
            android:id="@+id/msp_start_stack"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="8dp"
            android:hint="@string/starting_stack" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/btn_create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/create"
                android:layout_alignParentEnd="true"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>

    </LinearLayout>
</ScrollView>