<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StatisticsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/poker_background">

        <TextView
            android:id="@+id/tv_stat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_margin="8dp"
            android:padding="6dp"
            android:background="@drawable/rounded_corners_textview"
            android:text="@string/statistics"
            android:textSize="30sp"
            android:fontFamily="serif-monospace"
            android:textStyle="bold|italic"
            android:textAllCaps="true"
            android:textColor="@color/black"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="20dp"
            app:layout_constraintGuide_percent="0.5"/>

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_stat"
            app:layout_constraintRight_toLeftOf="@id/guideline"
            android:layout_margin="8dp"
            android:padding="6dp"
            android:background="@drawable/rounded_corners_textview"
            android:text="@string/user_name"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_name"
            app:layout_constraintRight_toLeftOf="@id/guideline"
            android:layout_margin="8dp"
            android:padding="6dp"
            android:background="@drawable/rounded_corners_textview"
            android:text="@string/registration_date"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tv_tables_played"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_register"
            app:layout_constraintRight_toLeftOf="@id/guideline"
            android:layout_margin="8dp"
            android:padding="6dp"
            android:background="@drawable/rounded_corners_textview"
            android:text="@string/tables_played"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tv_tables_won"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_tables_played"
            app:layout_constraintRight_toLeftOf="@id/guideline"
            android:layout_margin="8dp"
            android:padding="6dp"
            android:background="@drawable/rounded_corners_textview"
            android:text="@string/tables_won"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tv_all_hands"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_tables_won"
            app:layout_constraintRight_toLeftOf="@id/guideline"
            android:layout_margin="8dp"
            android:padding="6dp"
            android:background="@drawable/rounded_corners_textview"
            android:text="@string/total_hands"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tv_hands_won"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_all_hands"
            app:layout_constraintRight_toLeftOf="@id/guideline"
            android:layout_margin="8dp"
            android:padding="6dp"
            android:background="@drawable/rounded_corners_textview"
            android:text="@string/total_hands_won"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tv_chips_won"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_hands_won"
            app:layout_constraintRight_toLeftOf="@id/guideline"
            android:layout_margin="8dp"
            android:padding="6dp"
            android:background="@drawable/rounded_corners_textview"
            android:text="@string/total_chips_won"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tv_biggest_pot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_chips_won"
            app:layout_constraintRight_toLeftOf="@id/guideline"
            android:layout_margin="8dp"
            android:padding="6dp"
            android:background="@drawable/rounded_corners_textview"
            android:text="@string/biggest_pot_won"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tv_raise_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_biggest_pot"
            app:layout_constraintRight_toLeftOf="@id/guideline"
            android:layout_margin="8dp"
            android:padding="6dp"
            android:background="@drawable/rounded_corners_textview"
            android:text="@string/total_bet_raise_count"
            android:textColor="@color/black"/>

        <androidx.constraintlayout.widget.Placeholder
            android:layout_width="10dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@id/tv_showdown"
            app:layout_constraintBottom_toBottomOf="@id/tv_showdown"
            app:layout_constraintRight_toLeftOf="@id/tv_showdown" />

        <TextView
            android:id="@+id/tv_showdown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_raise_count"
            app:layout_constraintRight_toLeftOf="@id/guideline"
            android:layout_margin="8dp"
            android:padding="6dp"
            android:background="@drawable/rounded_corners_textview"
            android:text="@string/showdown_participations"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tv_flops"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_showdown"
            app:layout_constraintRight_toLeftOf="@id/guideline"
            android:layout_margin="8dp"
            android:padding="6dp"
            android:background="@drawable/rounded_corners_textview"
            android:text="@string/flops_seen"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tv_turns"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_flops"
            app:layout_constraintRight_toLeftOf="@id/guideline"
            android:layout_margin="8dp"
            android:padding="6dp"
            android:background="@drawable/rounded_corners_textview"
            android:text="@string/turns_seen"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tv_rivers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_turns"
            app:layout_constraintRight_toLeftOf="@id/guideline"
            android:layout_margin="8dp"
            android:padding="6dp"
            android:background="@drawable/rounded_corners_textview"
            android:text="@string/rivers_seen"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tv_players_busted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_rivers"
            app:layout_constraintRight_toLeftOf="@id/guideline"
            android:layout_margin="8dp"
            android:padding="6dp"
            android:background="@drawable/rounded_corners_textview"
            android:text="@string/players_busted"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tv_stat_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_stat"
            app:layout_constraintLeft_toRightOf="@id/guideline"
            android:layout_margin="8dp"
            android:padding="6dp"
            android:background="@drawable/rounded_corners_textview"
            android:textColor="@color/black"
            android:textStyle="italic"/>

        <TextView
            android:id="@+id/tv_stat_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_stat_name"
            app:layout_constraintLeft_toRightOf="@id/guideline"
            android:layout_margin="8dp"
            android:padding="6dp"
            android:background="@drawable/rounded_corners_textview"
            android:textColor="@color/black"
            android:textStyle="italic"/>

        <TextView
            android:id="@+id/tv_stat_tables_played"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_stat_register"
            app:layout_constraintLeft_toRightOf="@id/guideline"
            android:layout_margin="8dp"
            android:padding="6dp"
            android:background="@drawable/rounded_corners_textview"
            android:textColor="@color/black"
            android:textStyle="italic"/>

        <TextView
            android:id="@+id/tv_stat_tables_won"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_stat_tables_played"
            app:layout_constraintLeft_toRightOf="@id/guideline"
            android:layout_margin="8dp"
            android:padding="6dp"
            android:background="@drawable/rounded_corners_textview"
            android:textColor="@color/black"
            android:textStyle="italic"/>

        <TextView
            android:id="@+id/tv_stat_all_hands"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_stat_tables_won"
            app:layout_constraintLeft_toRightOf="@id/guideline"
            android:layout_margin="8dp"
            android:padding="6dp"
            android:background="@drawable/rounded_corners_textview"
            android:textColor="@color/black"
            android:textStyle="italic"/>

        <TextView
            android:id="@+id/tv_stat_hands_won"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_stat_all_hands"
            app:layout_constraintLeft_toRightOf="@id/guideline"
            android:layout_margin="8dp"
            android:padding="6dp"
            android:background="@drawable/rounded_corners_textview"
            android:textColor="@color/black"
            android:textStyle="italic"/>

        <TextView
            android:id="@+id/tv_stat_chips_won"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_stat_hands_won"
            app:layout_constraintLeft_toRightOf="@id/guideline"
            android:layout_margin="8dp"
            android:padding="6dp"
            android:background="@drawable/rounded_corners_textview"
            android:textColor="@color/black"
            android:textStyle="italic"/>

        <TextView
            android:id="@+id/tv_stat_biggest_pot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_stat_chips_won"
            app:layout_constraintLeft_toRightOf="@id/guideline"
            android:layout_margin="8dp"
            android:padding="6dp"
            android:background="@drawable/rounded_corners_textview"
            android:textColor="@color/black"
            android:textStyle="italic"/>

        <TextView
            android:id="@+id/tv_stat_raise_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_stat_biggest_pot"
            app:layout_constraintLeft_toRightOf="@id/guideline"
            android:layout_margin="8dp"
            android:padding="6dp"
            android:background="@drawable/rounded_corners_textview"
            android:textColor="@color/black"
            android:textStyle="italic"/>

        <TextView
            android:id="@+id/tv_stat_showdown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_stat_raise_count"
            app:layout_constraintLeft_toRightOf="@id/guideline"
            android:layout_margin="8dp"
            android:padding="6dp"
            android:background="@drawable/rounded_corners_textview"
            android:textColor="@color/black"
            android:textStyle="italic"/>

        <TextView
            android:id="@+id/tv_stat_flops"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_stat_showdown"
            app:layout_constraintLeft_toRightOf="@id/guideline"
            android:layout_margin="8dp"
            android:padding="6dp"
            android:background="@drawable/rounded_corners_textview"
            android:textColor="@color/black"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/tv_stat_turns"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_stat_flops"
            app:layout_constraintLeft_toRightOf="@id/guideline"
            android:layout_margin="8dp"
            android:padding="6dp"
            android:background="@drawable/rounded_corners_textview"
            android:textColor="@color/black"
            android:textStyle="italic"/>

        <TextView
            android:id="@+id/tv_stat_rivers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_stat_turns"
            app:layout_constraintLeft_toRightOf="@id/guideline"
            android:layout_margin="8dp"
            android:padding="6dp"
            android:background="@drawable/rounded_corners_textview"
            android:textColor="@color/black"
            android:textStyle="italic"/>

        <TextView
            android:id="@+id/tv_stat_players_busted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_stat_rivers"
            app:layout_constraintLeft_toRightOf="@id/guideline"
            android:layout_margin="8dp"
            android:padding="6dp"
            android:background="@drawable/rounded_corners_textview"
            android:textColor="@color/black"
            android:textStyle="italic"/>

        <androidx.constraintlayout.widget.Placeholder
            android:layout_width="1dp"
            android:layout_height="15dp"
            app:layout_constraintTop_toBottomOf="@id/tv_players_busted"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/tv_players_busted"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>